fixed spacing and list styles in track list

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("http://fonts.googleapis.com/css?family=Playfair+Display&subset=latin,latin-ext");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,latin-ext");
 
 /*main*/
 
@@ -8,31 +8,43 @@ div
    margin:60px 15%;
 }
 
-p, ol {
+p, li {
    font-family: 'Open Sans', serif;
 }
 
-p {line-height: 26px}
+p, ol {line-height: 26px}
 
-div>ol>li {
-   padding-bottom:10px;
+div>ul>li {
+   padding-bottom: 10px;
 }
 
-li li {
-   list-style-type: square;
+li > ul {
+   font: lighter 17px 'Open Sans', serif;
+}
+
+
+ul{
+   list-style: none;
+}
+
+div>ul {
+   width: 275px;
+   overflow:auto;
+   padding-top: 60px;
+   padding-left: 10%
 }
 
 img {
    float: left;
-   width: 450px;
-   padding-right: 70px;
-   padding-bottom: 70px
+   width: 515px;
+   padding: 60px 0
 }
 
 h2 {
    clear: both;
    padding-top: 110px;
    padding-bottom: 40px;
+   font-size: 38px;
    font-family: 'Fairplay', serif;
    margin: 0;
    color: #617c8a
